--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello Page</title>
+  <title>lanirudhreddy</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
@@ -17,6 +17,8 @@
       font-family: 'Poppins', sans-serif; /* Use Poppins as the first choice, fallback to sans-serif */
       background-color: black; /* Set the background color to black */
       color: white; /* Set the default text color to white */
+      background: url('https://images.unsplash.com/photo-1695569292033-95db9ad99cf8?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed; /* Set the background image */
+      background-size: cover; /* Ensure the background image covers the entire screen */
     }
 
     div {
@@ -30,7 +32,7 @@
 </head>
 <body>
   <div>
-    <p>Hello</p>
+    <p>Hello🌍!</p>
   </div>
 </body>
 </html>
